# telegram-bot

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml  ruff.toml
src/: .example.env  config.py  init_bot.py  run.py
src/callbacks/: __init__.py
src/database/: __init__.py  base.py
src/database/modules/: user.py
src/database/requests/: __init__.py  user.py
src/handlers/: __init__.py  commands.py
src/utils/: command_runner.py  logger.py  migration_database.py  settings_bot.py
src/utils/keyboards/: __init__.py  builders.py
